--- a/first_project/package.json
+++ b/first_project/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "boot-frontend",
+  "homepage": "https://Niranjana2713.github.io/boo",
+  "name": "first_project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,10 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "gh-pages": "^6.1.1",
+    "icons": "^1.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.0",
-    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
