--- a/first_project/package.json
+++ b/first_project/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Niranjana2713.github.io/boo",
+  "homepage": "https://Niranjana2713.github.io/React-js-Frontend",
   "name": "first_project",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
